[gd_scene load_steps=8 format=3 uid="uid://b8ruujys6hpsv"]

[ext_resource type="Script" uid="uid://dco8o0fkdeer1" path="res://assets/enemies/mimic/mimic.gd" id="1_bh34b"]
[ext_resource type="PackedScene" uid="uid://cyvlxuv7ocn53" path="res://assets/enemies/mimic/rig/Mimic_Chest.glb" id="1_k5pec"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_bh34b"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1yx5p"]
size = Vector3(3.83188, 0.271973, 2.82786)

[sub_resource type="BoxShape3D" id="BoxShape3D_3h6ei"]
size = Vector3(0.998428, 0.0917969, 1.34175)

[sub_resource type="BoxShape3D" id="BoxShape3D_7u230"]
size = Vector3(0.924194, 0.358643, 0.669678)

[sub_resource type="BoxShape3D" id="BoxShape3D_le8vv"]
size = Vector3(1, 0.810303, 0.628906)

[node name="Mimic" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource("1_bh34b")
metadata/_custom_type_script = "uid://crwji0op0yayj"

[node name="Rig" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Mimic_Chest" parent="Rig" instance=ExtResource("1_k5pec")]

[node name="Skeleton3D" parent="Rig/Mimic_Chest/Mimic_Armature" index="0"]
bones/0/position = Vector3(0, -0.0587736, 0.0659206)
bones/1/rotation = Quaternion(0.759205, 1.16293e-07, 2.62051e-08, 0.650851)
bones/2/position = Vector3(0.0246937, 0.15414, -0.145632)
bones/2/rotation = Quaternion(0.03568, -0.0248671, 0.000810407, 0.999053)
bones/2/scale = Vector3(0.549976, 0.549975, 0.549975)
bones/3/position = Vector3(3.05474e-10, 0.461228, -8.30849e-09)
bones/3/rotation = Quaternion(0.270655, 0.107354, -0.0541653, 0.955137)
bones/3/scale = Vector3(1, 1, 1)

[node name="AnimationTree" type="AnimationTree" parent="Rig"]
root_node = NodePath("../Mimic_Chest")
tree_root = SubResource("AnimationNodeBlendTree_bh34b")
advance_expression_base_node = NodePath("../..")
anim_player = NodePath("../Mimic_Chest/AnimationPlayer")

[node name="PlayerSearchArea" type="Area3D" parent="Rig"]

[node name="PlayerSearchCollider" type="CollisionShape3D" parent="Rig/PlayerSearchArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0805511, 0.364014, 1.46874)
shape = SubResource("BoxShape3D_1yx5p")

[node name="PlayerOutOfBoundsTimer" type="Timer" parent="Rig/PlayerSearchArea"]
wait_time = 5.0
one_shot = true

[node name="HitableArea" type="Area3D" parent="Rig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0703068, 0.138353, 0.428126)

[node name="HitableAreaCollider" type="CollisionShape3D" parent="Rig/HitableArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.104027, 0.454102, 0.522422)
shape = SubResource("BoxShape3D_3h6ei")

[node name="WeaponHitArea" type="Area3D" parent="Rig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.571382, 0.349461, 0.212775)

[node name="WeaponHitCollision" type="CollisionShape3D" parent="Rig/WeaponHitArea"]
transform = Transform3D(0.99998, 0, 0, 0, 0.99998, 0, 0, 0, 1, 0.622082, 0.0387264, 0.604217)
shape = SubResource("BoxShape3D_7u230")
debug_color = Color(0.988153, 0, 0.305179, 0.42)
debug_fill = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.531616, 0.185547)
shape = SubResource("BoxShape3D_le8vv")

[node name="canAttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[editable path="Rig/Mimic_Chest"]
